deploy: 99870fd472c2ff42262d281546f53895bbffc8b7

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,11 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="100-rc2">1.0.0-rc2</h2>
+<ul>
+<li>Refactor unwrapper from enhancer (#12)</li>
+<li>Updates to latest aas-core-meta, codegen and testgen</li>
+</ul>
 <h2 id="100-rc1">1.0.0-rc1</h2>
 <p>This is the first public version.</p>
 </article>
