deploy: e0ebc9f187cb01b6d8da6b786ee235f5624e4a70

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,21 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="100-rc3">1.0.0-rc3</h2>
+<ul>
+<li>Report unexpected text in XML sequences (#19)</li>
+<li>Update to aas-core-meta, codegen, testgen 44756fb, e2b793f,
+bf3720d7 (#18)
+<ul>
+<li>This is an important patch propagating in particular the following
+fixes which affected the constraints and their documentation:</li>
+<li>Pull requests in aas-core-meta 271, 272 and 273 which
+affect the nullability checks in constraints,</li>
+<li>Pull request in aas-core-meta 275 which affects
+the documentation of many constraints.</li>
+</ul>
+</li>
+</ul>
 <h2 id="100-rc2">1.0.0-rc2</h2>
 <ul>
 <li>Refactor unwrapper from enhancer (#12)</li>
