--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,22 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="100-rc4">1.0.0-rc4</h2>
+<ul>
+<li><p>Update to aas-core-meta, codegen, testgen 4d7e59e, f3d9538,
+9b43de2e (#22)</p>
+<p>This propagates the following fixes from aas-core-meta and
+aas-core-codegen:</p>
+<ul>
+<li>281 and 280 in aas-core-meta which fix invariants AASc-3a-010 and
+AASd-131, respectively.</li>
+<li>399 in aas-core-codegen which makes the visitation methods
+<code>Visit</code> and <code>Transform</code> in the abstract visitors and transformers
+virtual. This is necessary so that the implementors can override
+them, <em>e.g.</em>, for updating the current path to the visited object.</li>
+</ul>
+</li>
+</ul>
 <h2 id="100-rc3">1.0.0-rc3</h2>
 <ul>
 <li>Report unexpected text in XML sequences (#19)</li>
