deploy: 0cb7de74aa423c955fe71acfd31be13fb86ef7ac

--- a/change_log.html
+++ b/change_log.html
@@ -72,7 +72,11 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
-<h2 id="100-rc5">1.0.0-rc5</h2>
+<h2 id="100-2024-02-02">1.0.0 (2024-02-02)</h2>
+<p>This is the first stable release. The release candidates stood
+the test of time, so we are now confident to publish a stable
+version.</p>
+<h2 id="100-rc5-2023-11-09">1.0.0-rc5 (2023-11-09)</h2>
 <ul>
 <li><p>Fix error message in xmlization on XML declaration (#25)</p>
 <p>When we encountered XML declarations, we threw exceptions with
@@ -82,7 +86,7 @@ content, but most users omitted to read that in the documentation.</p>
 <code>MoveToContent</code> method on the reader.</p>
 </li>
 </ul>
-<h2 id="100-rc4">1.0.0-rc4</h2>
+<h2 id="100-rc4-2023-09-08">1.0.0-rc4 (2023-09-08)</h2>
 <ul>
 <li><p>Update to aas-core-meta, codegen, testgen 4d7e59e, f3d9538,
 9b43de2e (#22)</p>
@@ -98,7 +102,7 @@ them, <em>e.g.</em>, for updating the current path to the visited object.</li>
 </ul>
 </li>
 </ul>
-<h2 id="100-rc3">1.0.0-rc3</h2>
+<h2 id="100-rc3-2023-06-28">1.0.0-rc3 (2023-06-28)</h2>
 <ul>
 <li>Report unexpected text in XML sequences (#19)</li>
 <li>Update to aas-core-meta, codegen, testgen 44756fb, e2b793f,
@@ -113,7 +117,7 @@ the documentation of many constraints.</li>
 </ul>
 </li>
 </ul>
-<h2 id="100-rc2">1.0.0-rc2</h2>
+<h2 id="100-rc2-2023-03-24">1.0.0-rc2 (2023-03-24)</h2>
 <ul>
 <li>Refactor unwrapper from enhancer (#12)</li>
 <li>Updates to latest aas-core-meta, codegen and testgen</li>
