deploy: cbda55525067c5042e2e9944cb8c62a55a2f7d66

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,10 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="101-2024-03-13">1.0.1 (2024-03-13)</h2>
+<p>This patch release brings about the fix for patterns concerning dates and
+date-times with zone offset <code>14:00</code> which previously allowed for
+a concatenation without a plus sign.</p>
 <h2 id="100-2024-02-02">1.0.0 (2024-02-02)</h2>
 <p>This is the first stable release. The release candidates stood
 the test of time, so we are now confident to publish a stable
