deploy: a024d3b3c05e9698c3e73f00808dd5e92a7e06ef

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,10 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="102-2024-03-23">1.0.2 (2024-03-23)</h2>
+<p>In this patch version, we propagate the fix from abnf-to-regex related
+to maximum qualifiers which had been mistakenly represented as exact
+repetition before.</p>
 <h2 id="101-2024-03-13">1.0.1 (2024-03-13)</h2>
 <p>This patch release brings about the fix for patterns concerning dates and
 date-times with zone offset <code>14:00</code> which previously allowed for
