deploy: b798c9034aec7495b8777cdf51ec5dc7e3c4c647

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,9 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="103-2024-04-16">1.0.3 (2024-04-16)</h2>
+<p>The <code>dataSpecification</code> field in <code>EmbeddedDataSpecification</code> is made
+optional, according to the book.</p>
 <h2 id="102-2024-03-23">1.0.2 (2024-03-23)</h2>
 <p>In this patch version, we propagate the fix from abnf-to-regex related
 to maximum qualifiers which had been mistakenly represented as exact
