deploy: ac166ee314ddf120952954e27b34dc1b29ee1dac

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,16 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="104-2025-04-29">1.0.4 (2025-04-29)</h2>
+<p>We propagate the changes and fixes for V3.0.2; please refer to:</p>
+<ul>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/335">https://github.com/aas-core-works/aas-core-meta/pull/335</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/341">https://github.com/aas-core-works/aas-core-meta/pull/341</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/343">https://github.com/aas-core-works/aas-core-meta/pull/343</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/353">https://github.com/aas-core-works/aas-core-meta/pull/353</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/365">https://github.com/aas-core-works/aas-core-meta/pull/365</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/368">https://github.com/aas-core-works/aas-core-meta/pull/368</a></li>
+</ul>
 <h2 id="103-2024-04-16">1.0.3 (2024-04-16)</h2>
 <p>The <code>dataSpecification</code> field in <code>EmbeddedDataSpecification</code> is made
 optional, according to the book.</p>
