deploy: 157db9babeae20a3e0a337a3447a1c4a6df2bd1f

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,9 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="105-2025-10-20">1.0.5 (2025-10-20)</h2>
+<p>This is a patch release that propagates a fix for references index constraint
+where indices in references were erroneously assumed to be positive integers.</p>
 <h2 id="104-2025-04-29">1.0.4 (2025-04-29)</h2>
 <p>We propagate the changes and fixes for V3.0.2; please refer to:</p>
 <ul>
