deploy: b4c41f44daceec20b884ae52cf02092121cddfeb

--- a/change_log.html
+++ b/change_log.html
@@ -72,6 +72,13 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="change-log">Change Log</h1>
 
+<h2 id="106-2025-10-20">1.0.6 (2025-10-20)</h2>
+<p>We propagate the changes and fixes; please refer to:</p>
+<ul>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/382">https://github.com/aas-core-works/aas-core-meta/pull/382</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/385">https://github.com/aas-core-works/aas-core-meta/pull/385</a></li>
+<li><a href="https://github.com/aas-core-works/aas-core-meta/pull/388">https://github.com/aas-core-works/aas-core-meta/pull/388</a></li>
+</ul>
 <h2 id="105-2025-10-20">1.0.5 (2025-10-20)</h2>
 <p>This is a patch release that propagates a fix for references index constraint
 where indices in references were erroneously assumed to be positive integers.</p>
